fixed layout bug

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ li{
     margin-right:.5em;
 }
 .bottom-block{
-    margin-top: 30px;
+    margin-top: 50px;
     display:grid;
     row-gap: 15px;
 }   
